I have created my nav bar with links and hidden footer visibilty for now  as it is distracting

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,12 +14,29 @@
 <link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
 
 </head>
-<body>
-<header>Head</header>
 
+
+<!--header-->
+<header>
+    <a href="#" class="logo">Solo Hub</a>
+
+    <ul class="nav-bar">
+    <li><a href="#home">Home</a></li>
+    <li><a href="#about">About</a></li>
+    <li><a href="#contact">Contact Us</a></li>
+    </ul>
+</header>
+
+
+<!--main-->
 <main>Main</main>
 
+
+<!--footer-->
 <footer>Footer</footer>
+
+<!-- link to JS-->
+ <script type="text/javascript" src="js/script.js"></script>
 
 </body>
 </html>
