Placeholder background image added to see how the colours of the image would go with the logo colour

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <!--main-->
 <main>Main</main>
+<!--Placeholder image replace-->
+<img src="https://images.pexels.com/photos/3426891/pexels-photo-3426891.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Person on a paddle boat">
 
 
 <!--footer-->
