I have deleted my content in html and css to start again, will simplify design

--- a/index.html
+++ b/index.html
@@ -1,44 +1,11 @@
 <!DOCTYPE html>
-<lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solo Hub</title>
-    <link rel="stylesheet" type="text/css" href="assests/css/style.css">
-
-    <link rel="stylesheet"
-    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap" rel="stylesheet">
-
+    <title>Document</title>
 </head>
-
-
-<!--header-->
-<header>
-    <a href="#" class="logo">Solo Hub</a>
-
-    <ul class="nav-bar">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#about">About</a></li>
-    <li><a href="#contact">Contact Us</a></li>
-    </ul>
-</header>
-
-
-<!--main-->
-<main>Main</main>
-<!--Placeholder image replace-->
-<img src="https://images.pexels.com/photos/3426891/pexels-photo-3426891.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Person on a paddle boat">
-
-
-<!--footer-->
-<footer>Footer</footer>
-
-<!-- link to JS-->
- <script type="text/javascript" src="js/script.js"></script>
-
+<body>
+    
 </body>
 </html>
