html structure created and stylesheet linked

--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solo Hub</title>
+    <link rel="stylesheet" href="assests/css/style.css">
 </head>
 <body>
-    
+    <!--Header-->
+    <header>Header</header> 
+ 
+    <!--Main-->
+ <main>Main</main> 
+ 
+ <!--Footer-->
+ <footer>Footer</footer>
+
+
 </body>
 </html>
