html logo and nav bar created

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
     <!--Header-->
     <header>Header</header> 
- 
+    <nav>
+        <h1 class="logo"><a href="#">Solo Hub</a></h1>
+        <ul class="nav-bar">
+            <li><a href="#"></a>Home</li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Contact Us</li>
+        </ul>
+    </nav>
     <!--Main-->
  <main>Main</main> 
  
