Wild card selector added and some general css styling

--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 </head>
 <body>
     <!--Header-->
-    <header>Header</header> 
-    <nav>
-        <h1 class="logo"><a href="#">Solo Hub</a></h1>
-        <ul class="nav-bar">
-            <li><a href="#"></a>Home</li>
-            <li><a href="#"></a>About</li>
-            <li><a href="#"></a>Contact Us</li>
-        </ul>
-    </nav>
+    <header>
+        <section class="container">
+         <h1 class="logo"><a href="#">Solo Hub</a></h1>
+        </section>
+        <nav>
+            <ul class="nav-bar">
+                <li><a href="#"></a>Home</li>
+                <li><a href="#"></a>About</li>
+                <li><a href="#"></a>Contact Us</li>
+            </ul>
+        </nav>
+    </header> 
+    
     <!--Main-->
- <main>Main</main> 
+ <main>
+    <h1>Solo Adventures</h1>
+    <hr>
+    <p>Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace. At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips, and start planning your next adventure today!</p>
+    <hr>
+ </main> 
  
  <!--Footer-->
  <footer>Footer</footer>
