Color added to the logo

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Solo Hub</title>
     <link rel="stylesheet" href="assests/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--Header-->
     <header>
-        <section class="container">
+        <section class="title">
          <h1 class="logo"><a href="#">Solo Hub</a></h1>
         </section>
         <nav>
@@ -26,12 +29,13 @@
     <h1>Solo Adventures</h1>
     <hr>
     <p>Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace. At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips, and start planning your next adventure today!</p>
-    <hr>
+    
+<button>Read more</button>
  </main> 
  
  <!--Footer-->
  <footer>Footer</footer>
-
+     
 
 </body>
 </html>
