Meta tags for search engines added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!--Meta tags for search engines-->
+    <meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first time solo travellers">
+    <meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
+    
+    <!--Title-->
     <title>Solo Hub</title>
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
