added san-serif font to body element

--- a/index.html
+++ b/index.html
@@ -33,8 +33,11 @@
     <!--Main-->
  <main>
     <h1>Solo Adventures</h1>
-    <hr>
-    <p>Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace. At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips, and start planning your next adventure today!</p>
+    
+    <p class="p1">Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace. At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips, and start planning your next adventure today!</p>
+
+    <!--Place holder image-->
+  
     
 <button>Read more</button>
  </main> 
