Background image added

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <h1 class="logo">Solo Hub</h1>
+        <a href="index.html" class="logo">
+            <h1>Solo Hub</h1>
         </a>
         <nav>
             <ul>
@@ -24,6 +24,10 @@
             </ul>
         </nav>
     </header>
+    
+    <div class="banner">
+        <img src="https://media.istockphoto.com/id/1362645810/photo/colorful-sunset-sailboat-ocean-inspirational-landscape.jpg?s=612x612&w=0&k=20&c=0dJWWXo4NzFocbJnKVxhME5OUzCjJqfiE0iMpzH0n6k=" alt="boat">
+    </div>
     
     <main>
         <h1>Solo Adventures</h1>
