close and menu icon added to html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Linking to the stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
     
 <body>
@@ -21,6 +22,7 @@
             <a href="index.html" class="logo">Solo Hub</a> 
             
             <div class="nav-bar">
+                <i class="fa-regular fa-circle-xmark"></i>
                 <ul>
                     <li><a href="#HOME">HOME</a></li>
                     <li><a href="#ABOUT">ABOUT</a></li>
@@ -28,6 +30,7 @@
                     <li><a href="#CONTACT">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="fa-solid fa-bars"></i>
         </nav>
         <div class="text-box">
             <h1>Your Solo Adventure Awaits...</h1>
@@ -35,6 +38,7 @@
             <a href="#" class="hero-button">read more</a>
         </div>
     </section>
+    <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </body>
 </html>
    
