text for read me button changed to discover more in html

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
 </head>
     
 <body>
+    <!--header section-->
     <section class="header">
         <nav>
+             <!--logo-->
             <a href="index.html" class="logo">Solo Hub</a> 
             
             <div class="nav-bar">
                 <i class="fa-regular fa-circle-xmark"></i>
                 <ul>
+                     <!--nav bar-->
                     <li><a href="#HOME">HOME</a></li>
                     <li><a href="#ABOUT">ABOUT</a></li>
                     <li><a href="#BLOG">BLOG</a></li>
@@ -32,10 +35,14 @@
             </div>
             <i class="fa-solid fa-bars"></i>
         </nav>
+         <!--text box class -->
         <div class="text-box">
+             <!--h1 heading-->
             <h1>Your Solo Adventure Awaits...</h1>
+             <!--paragraph-->
             <p class="p1">Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, <br>we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace.<br> At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips,<br> and start planning your next adventure today!</p>
-            <a href="#" class="hero-button">read more</a>
+             <!--read more button-->
+            <a href="#" class="hero-button">discover more</a>
         </div>
     </section>
 
