close logo replaced

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <a href="index.html" class="logo">Solo Hub</a> 
             
             <div class="nav-bar">
-                <i class="fa-regular fa-circle-xmark"></i>
+                <i class="fa-solid fa-xmark"></i> <!--close mark-->
                 <ul>
                      <!--nav bar-->
                     <li><a href="#HOME">HOME</a></li>
                     <li><a href="#ABOUT">ABOUT</a></li>
-                    <li><a href="#BLOG">BLOG</a></li>
+                    <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
                     <li><a href="#CONTACT">CONTACT</a></li>
                 </ul>
             </div>
