close icon and menu icon white

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="#CONTACT">CONTACT</a></li>
                 </ul>
             </div>
-            <i class="fa-solid fa-bars"></i>
+            <i class="fa-solid fa-bars"></i> <!--menu icon-->
         </nav>
          <!--text box class -->
         <div class="text-box">
