discover more button linked to about page

--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
              <!--h1 heading-->
             <h1>Your Solo Adventure Awaits...</h1>
              <!--paragraph-->
-            <p class="p1">Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, <br>we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace.<br> At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips,<br> and start planning your next adventure today!</p>
+            <p class="p1">Welcome to Solo Hub, your go-to resource for unforgettable solo adventures! Whether you're a seasoned traveler or planning your first trip on your own, we're here to guide you every step of the way. Explore new cultures, discover breathtaking landscapes, and enjoy the freedom of traveling at your own pace. At Solo Hub, we believe solo travel is empowering, and we’re excited to help you make the most of every journey. Dive in, explore our tips, and start planning your next adventure today!</p>
              <!--read more button-->
-            <a href="#" class="hero-button">discover more</a>
+            <a href="about.html" class="hero-button">discover more</a>
         </div>
     </section>
 
