social media icons added

--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
         </div>
     </section>
    
+    <!-- Social Media Handles -->
+
+    <section class=socials>
+    <ul>
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">X</a></li>
+        <li><a href="">TikTok</a></li>
+    </ul>
+    </section>
+
+
    
     <!--javascript added to hide and show menu-->
    <script>
