tabs linked to relevant html pages

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i > <!--close mark icon-->
                 <ul>
                      <!--nav bar-->
-                    <li><a href="#HOME">HOME</a></li>
-                    <li><a href="#ABOUT">ABOUT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
                     <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
-                    <li><a href="#CONTACT">CONTACT</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i> <!--menu icon-->
