--- a/about.html
+++ b/about.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-    <title>Document</title>
+       <title>Document</title>
+<link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
-    <h1>Hi</h1>
+
+   
+ <header>Header</header>
+
+   <main>Main</main> 
+
+   <footer>Footer</footer>
+
+
+
+
+
 </body>
 </html>
