social media icons display set to none in mobile mode

--- a/about.html
+++ b/about.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
        <title>Document</title>
-<link rel="stylesheet" href="assets/css/about.css">
+
+       <!-- meta tags to optimise SEO -->
+<meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
+<meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
+
+<title>Solo Hub</title>
+
+       <!-- Linking to the stylesheet -->
+       <link rel="stylesheet" href="assets/css/about.css">
 </head>
 <body>
 
-   
+     <!-- Header --> 
  <header>Header</header>
 
-   <main>Main</main> 
+      <!-- Main -->
+ <main>Main</main> 
 
-   <footer>Footer</footer>
+     
+ <!-- footer --> 
+ <footer>Footer</footer>
 
 
 
