--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <!-- Linking to the stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
      
-    <!-- Linking to favicons -->
+    <!-- Linking to favicons -->  <!-- figure out how to get icon to be visible in browser tab -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assests/favicon-16x16.png">
+<link rel="manifest" href="/assets/site.webmanifest">
 
     <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
