alignment for header, main and footer set

--- a/about.html
+++ b/about.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-       <title>Document</title>
+       <title>Solo Hub</title>
 
        <!-- meta tags to optimise SEO -->
 <meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
 <meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
 
-<title>Solo Hub</title>
+<!-- Figure out how to have each page tab to reflect their title-->
+<title>About | Solo Hub</title>
 
        <!-- Linking to the stylesheet -->
        <link rel="stylesheet" href="assets/css/about.css">
