logo added to header and social media icons added to footer

--- a/about.html
+++ b/about.html
@@ -14,18 +14,52 @@
 
        <!-- Linking to the stylesheet -->
        <link rel="stylesheet" href="assets/css/about.css">
+       <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
      <!-- Header --> 
- <header>Header</header>
+ <header>
+    <nav>
+        <!--logo-->
+       <a href="index.html" class="logo">Solo Hub</a> 
+ </header>
 
       <!-- Main -->
- <main>Main</main> 
+ <main>
+    <h1>About</h1>
+ </main> 
 
      
  <!-- footer --> 
- <footer>Footer</footer>
+ <footer>
+    <div class="icon-container">
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our X  page (opens in a new tab)">
+                    <i class="fa-brands fa-square-x-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
+    </div>
+
+
+ </footer>
 
 
 
