--- a/about.html
+++ b/about.html
@@ -23,6 +23,16 @@
     <nav>
         <!--logo-->
        <a href="index.html" class="logo">Solo Hub</a> 
+       <div class="nav-bar" id="navBar"> <!-- Changed to id="navBar" -->
+        <ul>
+             <!--nav bar-->
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="about.html">ABOUT</a></li>
+            <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
+            <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+    </div>
+
  </header>
 
       <!-- Main -->
