--- a/contact.html
+++ b/contact.html
@@ -2,96 +2,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0">
-       <title>Solo Hub</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About | Solo Hub</title>
 
-       <!-- meta tags to optimise SEO -->
-<meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
-<meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
+    <!-- Meta tags for SEO -->
+    <meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
+    <meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
 
-<!-- Figure out how to have each page tab to reflect their title-->
-<title>About | Solo Hub</title>
-
-       <!-- Linking to the stylesheet -->
-       <link rel="stylesheet" href="assets/css/about.css">
-       <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
+    <!-- Linking to the stylesheet -->
+    <link rel="stylesheet" href="assets/css/about.css">
+    <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-     <!-- Header --> 
- <header>
-    <nav>
-        <!--logo-->
-       <a href="index.html" class="logo">Solo Hub</a> 
-       <div class="nav-bar" id="navBar"> <!-- Changed to id="navBar" -->
-        <ul>
-             <!--nav bar-->
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-        </ul>
-    </div>
+    <!-- Header --> 
+    <header>
+        <nav>
+            <!--logo-->
+            <a href="index.html" class="logo">Solo Hub</a> 
+            <div class="nav-bar" id="navBar">
+                <ul>
+                    <li><a href="index.html">HOME</a></li>
+                    <li><a href="about.html">ABOUT</a></li>
+                    <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
- </header>
+    <!-- Main -->
+    <main>
+        <div class="container">
+            <div class="contact-box">
+                <div class="left"></div>
+                <div class="right"> 
+                    <h3>Contact Us</h3>
+                    <input type="text" class="field" placeholder="Your Name">
+                    <input type="email" class="field" placeholder="Your Email">
+                    <input type="text" class="field" placeholder="Your Phone Number">
+                    <textarea class="field" placeholder="Message"></textarea>
+                    <button class="btn">Send</button>
+                </div>
 
-      <!-- Main -->
- <main>
-
- </main> 
-<div class="container">
-    <div class="contact-box">
-        <div class="left"></div>
-        <div class="right"> 
-            <h3>Contact Us</h3>
-            <input type="text" class="field" placeholder="Your Name">
-            <input type="email" class="field" placeholder="Your Email">
-            <input type="text" class="field" placeholder="Your Phone Number">
-            <textarea class="field" placeholder="Message"></textarea>
+            </div>
         </div>
-    </div>
-</div>
+    </main>
 
-
-
-   
-
-
-
-     
- <!-- footer --> 
- <footer>
-    <div class="icon-container">
-        <ul id="social-networks">
-            <li>
-                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page (opens in a new tab)">
-                    <i class="fa-brands fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our X  page (opens in a new tab)">
-                    <i class="fa-brands fa-square-x-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page (opens in a new tab)">
-                    <i class="fa-brands fa-youtube-square"></i></a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page (opens in a new tab)">
-                    <i class="fa-brands fa-instagram"></i></a>
-            </li>
-        </ul>
-    </div>
-
-
- </footer>
-
-
-
-
+    <!-- Footer --> 
+    <footer>
+        <div class="icon-container">
+            <ul id="social-networks">
+                <li><a href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)">
+                    <i class="fa-brands fa-facebook"></i></a></li>
+                <li><a href="https://www.twitter.com/" target="_blank" rel="noopener" aria-label="Visit our X page (opens in a new tab)">
+                    <i class="fa-brands fa-square-x-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com/" target="_blank" rel="noopener" aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)">
+                    <i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 </html>
