--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
 
     <!-- Linking to the stylesheet -->
-    <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/contact.css">
     <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -37,7 +37,7 @@
             <div class="contact-box">
                 <div class="left"></div>
                 <div class="right"> 
-                    <h3>Contact Us</h3>
+                    <h3 class="join">Join Our Community!</h3>
                     <input type="text" class="field" placeholder="Your Name">
                     <input type="email" class="field" placeholder="Your Email">
                     <input type="text" class="field" placeholder="Your Phone Number">
