--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
                 <ul>
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="#TRAVEL TIPS">TRAVEL TIPS</a></li>
+                    <li><a href="#TRAVEL TIPS">DESTINATIONS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
