--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Solo Hub</title>
+    <title>Contact | Solo Hub</title>
 
     <!-- Meta tags for SEO -->
     <meta name="description" content="Solo Hub. A website for people who enjoy solo travelling or first-time solo travellers">
@@ -20,14 +20,18 @@
         <nav>
             <!--logo-->
             <a href="index.html" class="logo">Solo Hub</a> 
-            <div class="nav-bar" id="navBar">
+            
+            <div class="nav-bar" id="navBar"> <!-- Changed to id="navBar" -->
+                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i > <!--close mark icon-->
                 <ul>
+                     <!--nav bar-->
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="#TRAVEL TIPS">DESTINATIONS</a></li>
+                    <li><a href="destinations.html">DESTINATIONS</a></li>
                     <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
+            <i class="fa-solid fa-bars" onclick="showMenu()"></i> <!--menu icon-->
         </nav>
     </header>
 
@@ -64,6 +68,16 @@
             </ul>
         </div>
     </footer>
-
+    <!--Javascript for toggle menu-->
+   
+  <script>
+    var navBar = document.getElementById("navBar");
+    function showMenu() {
+     navBar.style.right = "0";
+    }
+    function hideMenu() {
+     navBar.style.right = "-200px"
+    }
+    </script>
 </body>
 </html>
