edits to positioning of nav bar

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     <input type="email" class="field" placeholder="Your Email">
                     <input type="text" class="field" placeholder="Your Phone Number">
                     <textarea class="field" placeholder="Message"></textarea>
-                    <button class="btn">Send</button>
+                    <button class="btn">send</button>
                 </div>
 
             </div>
