edits to media queries

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <!-- Linking to the stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+   
      
     <!-- Linking to favicons -->  <!-- figure out how to get icon to be visible in browser tab -->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
@@ -81,7 +82,7 @@
   
     <!--Javascript for toggle menu-->
    
-  <script>
+  <!-- <script>
    var navBar = document.getElementById("navBar");
    function showMenu() {
     navBar.style.right = "0";
@@ -89,7 +90,8 @@
    function hideMenu() {
     navBar.style.right = "-200px"
    }
-   </script>
+   </script> -->
+   <script src="assets/js/scripts.js"></script>
   
 </body>
 </html>
