Media Query adjustments made to each page

--- a/destinations.html
+++ b/destinations.html
@@ -10,8 +10,6 @@
     <meta name="keywords" content="travel, destinations, solo trips, vacation, solo travel, travel guides">
 
     <!-- Linking to the stylesheet -->
-    
-    <link rel="stylesheet" href="assets/css/nav.css">
     <link rel="stylesheet" href="assets/css/destinations.css">
     <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
@@ -89,7 +87,8 @@
             
         </section>
     </main>
-
+ 
+    <!--Footer-->
     <footer>
         <div class="icon-container">
             <ul id="social-networks">
