new nav bar created

--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
     <!-- Linking to the stylesheet -->
     <!-- <link rel="stylesheet" href="assets/css/about.css"> -->
     <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/nav.bar.css">
 
     
 
