--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 
 <body>
     <!--header section-->
-    <section class="header2">
+    <section class="header">
         <nav>
              <!--logo-->
             <a href="index.html" class="logo">Solo Hub</a> 
