styling to about nav

--- a/about.html
+++ b/about.html
@@ -91,7 +91,19 @@
     </footer>
 
     <!-- JavaScript for Toggle Menu -->
-    <script src="assets/js/scripts.js"></script>
+    <script>
+    
+    var navBar = document.getElementById("navBar");
+    function showMenu() {
+     navBar.style.right = "0";
+    }
+    function hideMenu() {
+     navBar.style.right = "-200px"
+    }
+    </script>
+    </script>
+
+
 </body>
 </html>
 
