linked about stylesheet to about css

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="travel, solo trips, trips, holiday, destination, vacation, international, global, countries, worldwide">
 
     <!-- Linking to the stylesheet -->
-    <link rel="stylesheet" href="assets/css/contact.css">
+    <link rel="stylesheet" href="assets/css/about.css">
     <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
 <body>
