JS about page altered

--- a/about.html
+++ b/about.html
@@ -86,15 +86,13 @@
 
     <!-- JavaScript for Toggle Menu -->
     <script>
-    
     var navBar = document.getElementById("navBar");
     function showMenu() {
-     navBar.style.right = "0";
+        navBar.style.right = "0"; /* Shows the nav bar */
     }
     function hideMenu() {
-     navBar.style.right = "-200px"
+        navBar.style.right = "-70%"; /* Hides the nav bar */
     }
-
     </script>
 
 
