js linked to about page

--- a/about.html
+++ b/about.html
@@ -85,15 +85,7 @@
     </footer>
 
     <!-- JavaScript for Toggle Menu -->
-    <script>
-    var navBar = document.getElementById("navBar");
-    function showMenu() {
-        navBar.style.right = "0"; /* Shows the nav bar */
-    }
-    function hideMenu() {
-        navBar.style.right = "-70%"; /* Hides the nav bar */
-    }
-    </script>
+    <script src="scripts.js"></script>
 
 
 </body>
