--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
 
     <!-- Linking to the stylesheet -->
     <link rel="stylesheet" href="assets/css/about.css">
+    <link rel="stylesheet" href="assets/css/nav.bar.css">
     <script src="https://kit.fontawesome.com/db4ee61347.js" crossorigin="anonymous"></script>
 </head>
 <body>
